Домашняя работа №3 раздел 3: https://skyengpublic.notion.site/3-4-SQL-44e31f0c3b48423fb4d824fadec60d1a
Домашняя работа №2 раздел 3:
https://skyengpublic.notion.site/3-3-c3c2a6eb72b34d1b8e55ec214a3e26c9

Домашняя работа №1 раздел 3:
https://my.sky.pro/student-cabinet/stream-lesson/100300/homework